# ros-quickstart-rrrw

./: .gitignore  .gitmodules
.devcontainer/: Dockerfile  devcontainer.json  setup_container.bash
src/simple_commander/: CMakeLists.txt  README.md  package.xml  pytest.ini
src/simple_commander/config/: diff_drive_controller.yaml  slam_toolbox.yaml
src/simple_commander/launch/: README.md  simple_turtlebot4.launch.py
src/simple_commander/prompts/: architecture.md  dialogue_eng.md  explorer_bot_plan.md
src/simple_commander/prompts/plans/: evaluation_metrics.md  explorer_bot_plan.md  rviz_control_interface.md  testing_methodology.md
src/simple_commander/prompts/plans/stage1/: stage1_1_package_and_launch.md  stage1_2_rviz_and_navigation_tests.md  stage1_3_integration_and_success.md
src/simple_commander/prompts/plans/stage2/: 2_1_apriltag_detection_node.md  2_2_tag_pose_recording_and_visualization.md  2_3_detection_accuracy_and_navigation_integration.md
src/simple_commander/prompts/plans/stage3/: 3_1_frontier_and_strategy.md  3_2_navigation_and_recovery.md  3_3_completion_and_monitoring.md
src/simple_commander/prompts/plans/stage4/: 4_1_system_integration_and_action_server.md  4_2_rviz_panel_and_optimization.md  4_3_testing_and_deployment.md
src/simple_commander/rviz/: explorer_bot.rviz
src/simple_commander/simple_commander/: say_hello.py  simple_teleop.py
src/simple_commander/test/: conftest.py  run_stage1_2_tests.py  test_integration_simple.py  test_navigation_basic.py  test_runner.py  test_rviz_map.py
src/simple_commander/urdf/: turtlebot.urdf.xacro
(+9 files in other folders)
